# awesome-layered-proof-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
factor/circuit/: factor.circom
fish/: InRange.circom  README.md  input.json  run.sh
helloworld/: CMakeLists.txt  vitalik.cpp
merkle/: CMakeLists.txt  main.cpp  merklecircuit.h
mixer/: README.md  package.json
mixer/circuit/: generate_leaf_existence_input.js  test.js  verifier.sol
mixer/contracts/: MerkleTree.sol  Mixer.sol  verifier.sol
mixer/migrations/: 2_deploy_contracts.js
mixer/scripts/: big_prime_generator.py  call_mimc.js  call_mixer.js  deploy_mimc.js
zk_rollup/: .env.sample  hardhat.config.ts
zk_rollup/circuit/: abc.circom  deposit.circom  generate_leaf_existence.js  generate_verify_eddsa.js  get_merkle_root.circom  leaf_existence.circom  process_tx.circom  run.sh  run.sh.bk  tx.circom  verify_eddsa.circom  withdraw.circom
zk_rollup/contracts/: MerkleTree.sol  verifier.sol
zk_rollup/scripts/: generate_abc.js  generate_account_circuit_input.js  generate_leaf_existence.js  generate_leaf_existence_circuit_input.js  generate_verify_eddsa.js
zk_rollup/test/: deploy_mimc.js
